fix nav bar alignment
also delete some old css classes that are not in use

--- a/docs/_sass/main.scss
+++ b/docs/_sass/main.scss
@@ -61,15 +61,26 @@ html {
 	width: 100%;
 	max-width: 100%;
 	display: flex;
-	justify-content: space-between;
-	align-items: center;
+	flex-grow: 1;
+	flex-flow: column nowrap;
+	justify-content: center;
 }
 
 .homepage-title {
-	width: 33%;
+	width: 100%;
+	max-width: 100%;
 	display: flex;
+	flex-wrap: nowrap;
+	justify-content: center;
 	font-size: 36px;
-	text-align: center;
+}
+
+.website-header {
+	color: #000000;
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 
 .website-footer {
@@ -138,7 +149,7 @@ a.nav-bar-menu:hover {
 }
 
 .about-page-content {
-	width: 75%;
+	width: 50%;
 	margin: auto;
 }
 
@@ -197,19 +208,6 @@ p.about-page-content {
 	text-align: center;
 }
 
-.solid-port-section-divider {
-	border-top: 3px solid #000000;
-}
-
-.solid-blog-section-divider {
-	border-top: 1.5px solid #000000;
-	width: 25%;
-}
-
-a {
-	color: #ff48a5;
-	text-decoration: none;
-} 
 a:hover {
 	text-decoration: underline;
 }
